# recon

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  featurestoadd.txt  pipeline.md
src/app/: __init__.py  cli.py  main.py
src/app/core/: client.py  linker.py  patterns.py
src/app/fetchers/: discord.py  github.py  hackernews.py  leetcode.py  mastodon.py  protonmail.py  reddit.py
src/app/models/: github.py  hackernews.py  handle.py  leetcode.py  mastodon.py  reddit.py
src/app/utils/: common.py  patterns.py
