# configs and packaging

[project]
name = "recon_losthread"
version = "1.0.0"
authors = [{ name="losthread"}]
description = "A CLI tool for scanning ports like nmap"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
license = { text = "MIT" }
dependencies = [

]

[project.scripts]
pscan = "app.cli:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]