[project]
name = "recon_losthread"
version = "1.0.0"
authors = [{ name="losthread"}]
description = "Link anonymous profiles using OSINT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
license = { text = "MIT" }
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
recon = "app.main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]